--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-virtualenv>=14.0.3
-Flask>=0.10.1
-flask-restful>=0.3.5
-pymysql>=0.7.1
-pymongo>=3.2.3
-jsonpickle>= 0.9.3
+virtualenv == 14.0.3
+Flask == 0.10.1
+flask-restful == 0.3.5
+pymysql == 0.7.1
+pymongo == 3.2.3
+jsonpickle == 0.9.3
 gunicorn == 19.9.0
 streamlit==0.57.3
