--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ flask-restful == 0.3.5
 pymysql == 0.7.1
 pymongo == 3.3.1
 jsonpickle == 0.9.3
-gunicorn == 19.9.0
+
 streamlit==0.57.3
 
 
@@ -15,8 +15,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 dominate==2.3.1
-elasticsearch==7.5.1
-Flask==1.0.2
+elasticsearch==7.5.
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==4.0.0
